# Research_at_Nvidia

./: .gitignore  README.md  pyproject.toml  ruff.toml
1_LocateAnything-3B/: nvidia_vision_model.py  testing_nvidia_3B_model.py
2_Qwen2.5-VL-3B/: qwen_vl_image_description.py
