[project]
name = "project-nvidia"
version = "0.1.0"
description = "Estudar os modelos da Nvidia e aplicar a problemas do dia dia"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "decord>=0.6.0",
    "huggingface-hub>=0.34.0,<1.0",
    "lmdb>=2.2.1",
    "opencv-python>=4.13.0.92",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers==4.57.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.16",
]

[tool.black]
target-version = ["py314"]
line-length = 120

[tool.ruff]
extend = "ruff.toml"
